# differential_drive_robot

./: README.md
diffdrive_description/: CMakeLists.txt  package.xml
diffdrive_description/launch/: spawn_robot.launch
diffdrive_description/rviz/: config.rviz
diffdrive_description/urdf/: diffdrive_robot.urdf.xacro
diffdrive_description/urdf/config/: config.yaml
diffdrive_description/urdf/include/: config.xacro  gazebo.xacro  inertia.xacro  links_joints.xacro
