<?xml version="1.0"?>
<package format="2">
  <name>diffdrive_description</name>
  <version>0.0.1</version>
  <description>A simple Differential Drive robot package, with URDF and Gazbo plugin implemented</description>
  
  <maintainer email="dammala.aakash@gmail.com">aakash</maintainer>
  <url type="website">https://github.com/iAakashD</url>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rviz</depend>
 
</package>
